--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,7 +76,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=library
-main.class=NewClass
+main.class=theme.Home
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
