--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=dist/DateChooser.jar
+file.reference.DateChooser.jar-1=C:\\Users\\phamh\\Downloads\\DateChooser.jar
 file.reference.KControls.jar=dist/KControls.jar
+file.reference.KControls.jar-1=C:\\Users\\phamh\\Downloads\\KControls.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=D:\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre8.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar-1=dist\\mssql-jdbc-8.4.1.jre8.jar
 includes=**
@@ -44,7 +46,9 @@ javac.classpath=\
     ${file.reference.KControls.jar}:\
     ${file.reference.mssql-jdbc-8.4.1.jre8.jar}:\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.mssql-jdbc-8.4.1.jre8.jar-1}
+    ${file.reference.mssql-jdbc-8.4.1.jre8.jar-1}:\
+    ${file.reference.DateChooser.jar-1}:\
+    ${file.reference.KControls.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
