--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,12 @@ endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=dist/DateChooser.jar
 file.reference.DateChooser.jar-1=C:\\Users\\phamh\\Downloads\\DateChooser.jar
+file.reference.javafx-ui-swing.jar.zip=C:\\Users\\phamh\\Downloads\\javafx-ui-swing.jar.zip
 file.reference.KControls.jar=dist/KControls.jar
 file.reference.KControls.jar-1=C:\\Users\\phamh\\Downloads\\KControls.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=D:\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre8.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar-1=dist\\mssql-jdbc-8.4.1.jre8.jar
+file.reference.swingx-all-1.6.4.jar=C:\\Users\\phamh\\Downloads\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.mssql-jdbc-8.4.1.jre8.jar-1}:\
     ${file.reference.DateChooser.jar-1}:\
-    ${file.reference.KControls.jar-1}
+    ${file.reference.KControls.jar-1}:\
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.javafx-ui-swing.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
